testing/framework/resources/Advanced/Failing/mondrian/query6320.e
USA	CA	Daly City	1924	Donald Davis	Donald Davis	M	S	Bachelors Degree	$50K - $70K	Kiwi	Kiwi Scallops	Tip Top Savings
USA	CA	Novato	2274	Karen Koman	Karen Koman	F	S	Bachelors Degree	$50K - $70K	Fast	Fast Avocado Dip	Shelf Emptiers
USA	CA	Novato	5	Maya Gutierrez	Maya Gutierrez	F	S	Partial College	$30K - $50K	Moms	Moms Sliced Turkey	Shelf Emptiers
USA	CA	Palo Alto	7495	Sandy Melton	Sandy Melton	F	S	High School Degree	$50K - $70K	High Top	High Top Cauliflower	Tip Top Savings
USA	CA	Palo Alto	7495	Sandy Melton	Sandy Melton	F	S	High School Degree	$50K - $70K	Sphinx	Sphinx Bagels	Tip Top Savings
USA	CA	Redwood City	10197	Cleo Passig	Cleo Passig	F	M	Partial College	$30K - $50K	High Top	High Top Lemons	No Promotion
USA	CA	Redwood City	8830	Juan Bradley	Juan Bradley	F	S	High School Degree	$30K - $50K	High Top	High Top Cauliflower	No Promotion
